feat: single thread testing & some fixes